# minicbor

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Justfile  Makefile  README.md
.github/: pull_request_template.md
.github/workflows/: develop.yml
minicbor/: CHANGELOG.md  Cargo.toml  README.md  build.rs
minicbor-bench/: Cargo.toml
minicbor-bench/tests/: bench.rs
minicbor-derive/: CONTRIBUTING.md  Cargo.toml  README.md
minicbor-derive/src/: attrs.rs  cbor_len.rs  decode.rs  encode.rs  fields.rs  lib.rs  lifetimes.rs  variants.rs
minicbor-derive/src/attrs/: codec.rs
minicbor-io/: Cargo.toml  README.md
minicbor-io/src/: aio.rs  async_reader.rs  async_writer.rs  error.rs  io.rs  lib.rs  reader.rs  writer.rs
minicbor-io/src/aio/: reader.rs
minicbor-io/src/io/: reader.rs  writer.rs
minicbor-io/tests/: aio.rs  io.rs
minicbor-serde/: Cargo.toml  README.md
minicbor-serde/src/: de.rs  error.rs  lib.rs  ser.rs
minicbor-tests/: Cargo.toml
minicbor-tests-client/: Cargo.toml
minicbor-tests-client/src/: main.rs
minicbor-tests-defmt/: Cargo.toml  build.rs  memory.x
minicbor-tests-defmt/.cargo/: config.toml
minicbor-tests-defmt/src/: main.rs
minicbor-tests-nostd/: Cargo.toml
minicbor-tests-nostd/src/: main.rs
minicbor-tests/benches/: benchmark.rs
minicbor-tests/fuzz/: Cargo.toml
minicbor-tests/fuzz/fuzz_targets/: tokenizer.rs
minicbor-tests/src/: bytes.rs  derive.rs  deriving.rs  enums.rs  lib.rs  structs.rs  various.rs
minicbor-tests/tests/: arbitrary.rs  compat.rs  encoding.rs  identities.rs  int.rs  interop.rs  legacy.rs  length.rs  misc.rs  nested.rs  rfc.rs  serde.rs  skip.rs
minicbor/src/: bytes.rs  data.rs  decode.rs  encode.rs  legacy.rs  lib.rs  serde.rs  string.rs
minicbor/src/data/: token.rs
minicbor/src/decode/: decoder.rs  error.rs  generic.rs  info.rs  read.rs  tokens.rs
minicbor/src/encode/: cbor.rs  encoder.rs  error.rs  iter.rs  write.rs
minicbor/src/serde/: de.rs  ser.rs
