[package]
name          = "minicbor-derive"
version       = "0.6.3"
authors       = ["Toralf Wittner <tw@dtex.org>"]
license       = "BlueOak-1.0.0"
edition       = "2018"
description   = "Derive minicbor `Decode` and `Encode` traits."
repository    = "https://gitlab.com/twittner/minicbor"
documentation = "https://twittner.gitlab.io/minicbor/minicbor_derive/"
keywords      = ["cbor", "encoding", "binary"]
categories    = ["encoding"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.18"
quote       = "1.0.7"
syn         = { version = "1.0.33", features = ["extra-traits", "visit"] }

[dev-dependencies]
minicbor = { path = "../minicbor", features = ["std", "derive"] }
