[package]
name          = "minicbor-io"
version       = "0.1.0"
authors       = ["Toralf Wittner <tw@dtex.org>"]
license       = "BlueOak-1.0.0"
edition       = "2018"
description   = "I/O utilities for minicbor."
repository    = "https://gitlab.com/twittner/minicbor"
documentation = "https://twittner.gitlab.io/minicbor/minicbor-io/"
keywords      = ["cbor", "encoding", "binary"]
categories    = ["encoding"]

[package.metadata.docs.rs]
all-features = true

[features]
aio = ["futures-core", "futures-io", "futures-util"]

[dependencies]
futures-core = { version = "0.3.8", optional = true }
futures-io = { version = "0.3.8", optional = true }
futures-util = { version = "0.3.8", features = ["io"], optional = true }
minicbor = { path = "../minicbor", version = "0.7.0", features = ["std"] }
static_assertions = "1.1.0"

[dev-dependencies]
quickcheck = "0.9"
