[package]
publish     = false
name        = "minicbor-tests"
version     = "0.1.0"
authors     = ["Toralf Wittner <tw@dtex.org>"]
license     = "BlueOak-1.0.0"
edition     = "2018"
description = "minicbor test suite"
repository  = "https://gitlab.com/twittner/minicbor"

[features]
__test-partial-skip-support = ["minicbor/__test-partial-skip-support"]

[dependencies]
minicbor = { path = "../minicbor", features = ["std", "half", "derive"] }

[dev-dependencies]
criterion  = "0.3"
half       = "1.6"
hex        = "0.4.2"
quickcheck = "1.0.1"
rand       = "0.8"
serde      = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"

[[bench]]
name = "benchmark"
harness = false

