[package]
publish     = false
name        = "minicbor-tests"
version     = "0.1.0"
authors     = ["Toralf Wittner <tw@dtex.org>"]
license     = "BlueOak-1.0.0"
edition     = "2021"
description = "minicbor test suite"
repository  = "https://gitlab.com/twittner/minicbor"

[features]
alloc  = ["minicbor/alloc"]
std    = ["alloc", "minicbor/std", "minicbor/derive"]
derive = ["alloc", "minicbor/derive"]

[dependencies]
arbitrary = { version = "1.3.2", features = ["derive"] }
minicbor  = { path = "../minicbor", features = ["half"] }

[dev-dependencies]
half       = "2.4.1"
hex        = "0.4.2"
quickcheck = "1.0.1"
rand       = "0.8.5"
serde      = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
