[package]
name          = "minicbor"
version       = "0.9.0"
authors       = ["Toralf Wittner <tw@dtex.org>"]
license       = "BlueOak-1.0.0"
edition       = "2018"
description   = "A small CBOR codec suitable for no_std environments."
repository    = "https://gitlab.com/twittner/minicbor"
documentation = "https://twittner.gitlab.io/minicbor/minicbor/"
keywords      = ["cbor", "encoding", "binary"]
categories    = ["encoding"]

[package.metadata.docs.rs]
all-features = true

[features]
alloc  = []
std    = ["alloc"]
derive = ["minicbor-derive"]

[dependencies]
minicbor-derive = { version = "0.6.4", path = "../minicbor-derive", optional = true }
half            = { version = "1", default-features = false, optional = true }

[dev-dependencies]
minicbor = { path = ".", features = ["std"] }

[[bin]]
name = "cbor-display"
required-features = ["std", "half"]

