[package]
name          = "minicbor"
version       = "0.11.3"
authors       = ["Toralf Wittner <tw@dtex.org>"]
license       = "BlueOak-1.0.0"
edition       = "2018"
description   = "A small CBOR codec suitable for no_std environments."
repository    = "https://gitlab.com/twittner/minicbor"
documentation = "https://twittner.gitlab.io/minicbor/minicbor/"
keywords      = ["cbor", "encoding", "binary"]
categories    = ["encoding"]
build         = "build.rs"

[package.metadata.docs.rs]
features = ["std", "derive", "half"]

[features]
alloc   = []
std     = ["alloc"]
derive  = ["minicbor-derive", "alloc"]
partial-skip-support   = []
partial-derive-support = ["minicbor-derive", "partial-skip-support"]
# Internal feature flags used for testing only:
__test-partial-skip-support = []

[dependencies]
minicbor-derive = { version = "0.7.1", path = "../minicbor-derive", optional = true }
half            = { version = "1", default-features = false, optional = true }

[dev-dependencies]
minicbor = { path = ".", features = ["std", "half"] }

[[bin]]
name = "cbor-display"
required-features = ["std", "half"]

